--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
 	{
 		"key": "sb",
-		"value": "BtwZZ2VzELqD0tHHTLcQex6K",
+		"value": "BAwZZ0UhMW-o38uvULUcAF2z",
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2024-11-08T21:58:07.120Z",
-		"lastAccessed": "2024-11-08T21:58:07.120Z"
+		"creation": "2024-11-16T03:51:02.672Z",
+		"lastAccessed": "2024-11-16T03:51:02.673Z"
 	},
 	{
 		"key": "dpr",
@@ -14,79 +14,61 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2024-11-08T21:58:07.120Z",
-		"lastAccessed": "2024-11-08T21:58:07.120Z"
-	},
-	{
-		"key": "ps_l",
-		"value": "1",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2024-11-08T21:58:07.120Z",
-		"lastAccessed": "2024-11-08T21:58:07.120Z"
-	},
-	{
-		"key": "ps_n",
-		"value": "1",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2024-11-08T21:58:07.120Z",
-		"lastAccessed": "2024-11-08T21:58:07.120Z"
-	},
-	{
-		"key": "wd",
-		"value": "1536x738",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2024-11-08T21:58:07.120Z",
-		"lastAccessed": "2024-11-08T21:58:07.120Z"
-	},
-	{
-		"key": "c_user",
-		"value": "61565787194115",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2024-11-08T21:58:07.120Z",
-		"lastAccessed": "2024-11-08T21:58:07.120Z"
+		"creation": "2024-11-16T03:51:02.673Z",
+		"lastAccessed": "2024-11-16T03:51:02.673Z"
 	},
 	{
 		"key": "datr",
-		"value": "FBEuZ-010Kx0PXBzgP70hNDG",
+		"value": "wRguZ12qC0LCXeJ-HqH9xTB2",
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2024-11-08T21:58:07.120Z",
-		"lastAccessed": "2024-11-08T21:58:07.120Z"
+		"creation": "2024-11-16T03:51:02.673Z",
+		"lastAccessed": "2024-11-16T03:51:02.673Z"
 	},
 	{
-		"key": "fr",
-		"value": "16iqV8Olm6BUHJV6n.AWXUpGiMPSiZlviiQrUUrKH8bf0.BnLhjt..AAA.0.0.BnLhjt.AWVAx9VDP0I",
+		"key": "c_user",
+		"value": "61568069879225",
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2024-11-08T21:58:07.120Z",
-		"lastAccessed": "2024-11-08T21:58:07.120Z"
-	},
-	{
-		"key": "xs",
-		"value": "9%3AAYgXM4c-YREUEQ%3A2%3A1731072277%3A-1%3A4036%3A%3AAcXvWbUlxmUxPemUiEl6VBwDfTc6BkyMDcjMMK4DGw",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2024-11-08T21:58:07.120Z",
-		"lastAccessed": "2024-11-08T21:58:07.120Z"
+		"creation": "2024-11-16T03:51:02.673Z",
+		"lastAccessed": "2024-11-16T03:51:02.673Z"
 	},
 	{
 		"key": "presence",
-		"value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1731103073342%2C%22v%22%3A1%7D",
+		"value": "C%7B%22lm3%22%3A%22u.100013384479798%22%2C%22t3%22%3A%5B%5D%2C%22utc3%22%3A1731723616045%2C%22v%22%3A1%7D",
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2024-11-08T21:58:07.120Z",
-		"lastAccessed": "2024-11-08T21:58:07.120Z"
+		"creation": "2024-11-16T03:51:02.673Z",
+		"lastAccessed": "2024-11-16T03:51:02.673Z"
+	},
+	{
+		"key": "xs",
+		"value": "1%3AUqgMLl-xaBqUBA%3A2%3A1731679331%3A-1%3A-1%3A%3AAcXbyoTZPr4Je6si9GurWohmQbjsjiX926l51XLvJw",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2024-11-16T03:51:02.673Z",
+		"lastAccessed": "2024-11-16T03:51:02.673Z"
+	},
+	{
+		"key": "wd",
+		"value": "1056x776",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2024-11-16T03:51:02.673Z",
+		"lastAccessed": "2024-11-16T03:51:02.673Z"
+	},
+	{
+		"key": "fr",
+		"value": "1PHYNxYZcwqDJJWH7.AWVAh6E-WLksx-iDYOIipifZOqU.BnN5Ji..AAA.0.0.BnN6Y7.AWWyBnVdGIM",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2024-11-16T03:51:02.673Z",
+		"lastAccessed": "2024-11-16T03:51:02.673Z"
 	}
 ]
